<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".AdvancedLevelMainActivity">

    <Button
        android:id="@+id/submittexts_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:onClick="launchSubmitBtnAdvanced"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/third_imageview"
        app:layout_constraintStart_toStartOf="@+id/third_imageview"
        app:layout_constraintTop_toBottomOf="@+id/third_imageview" />

    <EditText
        android:id="@+id/editText_two"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_the_car_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/second_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/second_imageview"
        app:layout_constraintTop_toTopOf="@+id/second_imageview"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_three"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_the_car_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/third_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/third_imageview"
        app:layout_constraintTop_toTopOf="@+id/third_imageview"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_one"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_the_car_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@+id/first_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/first_imageview"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/third_imageview"
        android:layout_width="209dp"
        android:layout_height="147dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:contentDescription="@string/_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_imageview" />

    <ImageView
        android:id="@+id/second_imageview"
        android:layout_width="209dp"
        android:layout_height="147dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:contentDescription="@string/_24dp"
        app:layout_constraintBottom_toTopOf="@id/third_imageview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_imageview" />

    <ImageView
        android:id="@+id/first_imageview"
        android:layout_width="209dp"
        android:layout_height="147dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:contentDescription="@string/_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/advanced_timer_textView" />

    <TextView
        android:id="@+id/finalresult_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textColor="#EA190A"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/submittexts_button"
        app:layout_constraintTop_toBottomOf="@+id/third_imageview" />

    <TextView
        android:id="@+id/mark_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/finalresult_textView"
        app:layout_constraintStart_toStartOf="@+id/finalresult_textView"
        app:layout_constraintTop_toBottomOf="@+id/editText_three"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/advanced_timer_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/first_imageview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>